--- a/t4u_website/templates/navbar.html
+++ b/t4u_website/templates/navbar.html
@@ -5,4 +5,15 @@
     <span>{% if request.path == about_url %}About{% else %}<a href="{{ about_url }}">About</a>{% endif %}</span>
     {% url 'contact' as contact_url %}
     <span>{% if request.path == contact_url %}Contact{% else %}<a href="{{ contact_url }}">Contact</a>{% endif %}</span>
+    <span style="float:right">
+        {% if user.is_authenticated %}
+        <span> 
+        {% url 'profile' as profile_url%}
+        {%if request.path == profile_url%}Hi {{ user.username }}! {% else %}<a href="{{profile_url}}">Hi {{ user.username }}!</a>{% endif %}
+        </span>
+        <span><a href="{% url 'logout' %}">Logout</a></span>
+        {% else %}
+        <span><a href="{% url 'login' %}">Login</a></span>
+        {% endif %}
+    </span>
 </div>
