--- a/t4u_website/templates/navbar.html
+++ b/t4u_website/templates/navbar.html
@@ -1,19 +1,19 @@
 <div>
-    {% url 'index' as index_url %}
+    {% url 'public:index' as index_url %}
     <span>{% if request.path == index_url %}Home{% else %}<a href="{{ index_url }}">Home</a>{% endif %}</span>
-    {% url 'about' as about_url %}
+    {% url 'public:about' as about_url %}
     <span>{% if request.path == about_url %}About{% else %}<a href="{{ about_url }}">About</a>{% endif %}</span>
-    {% url 'contact' as contact_url %}
+    {% url 'public:contact' as contact_url %}
     <span>{% if request.path == contact_url %}Contact{% else %}<a href="{{ contact_url }}">Contact</a>{% endif %}</span>
     <span style="float:right">
         {% if user.is_authenticated %}
         <span> 
-        {% url 'profile' as profile_url%}
+        {% url 'accounts:profile' as profile_url%}
         {%if request.path == profile_url%}Hi {{ user.username }}! {% else %}<a href="{{profile_url}}">Hi {{ user.username }}!</a>{% endif %}
         </span>
-        <span><a href="{% url 'logout' %}">Logout</a></span>
+        <span><a href="{% url 'accounts:logout' %}">Logout</a></span>
         {% else %}
-        <span><a href="{% url 'login' %}">Login</a></span>
+        <span><a href="{% url 'accounts:login' %}">Login</a></span>
         {% endif %}
     </span>
 </div>
