--- a/t4u_website/templates/navbar.html
+++ b/t4u_website/templates/navbar.html
@@ -1,4 +1,33 @@
-<div>
+{% load static %}
+
+{% url 'public:index' as index_url %}
+{% url 'public:about' as about_url %}
+{% url 'public:service' as service_url %}
+{% url 'public:contact' as contact_url %}
+
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand" href="#page-top"> 
+        {% comment %} <img class="logo1" src="{% static "img/logo2.png" %}" /> {% endcomment %}
+        <h1 id="nav-head">Tutor4You</h1>
+        </a>
+        <button class="navbar-toggler text-uppercase font-weight-bold t4u-bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 {% if request.path == index_url %}active{% endif %}" href="{{ index_url }}">Home</a></li>
+                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 {% if request.path == about_url %}active{% endif %}" href="{{ about_url }}">About</a></li>
+                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 {% if request.path == service_url %}active{% endif %}" href="{{ service_url }}">Service & Fees</a></li>
+                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 {% if request.path == contact_url %}active{% endif %}" href="{{ contact_url }}">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+{% comment %} <div>
     {% url 'public:index' as index_url %}
     <span>{% if request.path == index_url %}Home{% else %}<a href="{{ index_url }}">Home</a>{% endif %}</span>
     {% url 'public:about' as about_url %}
@@ -18,4 +47,4 @@
         <span><a href="{% url 'accounts:login' %}">Login</a></span>
         {% endif %}
     </span>
-</div>
+</div> {% endcomment %}
