--- a/t4u_website/templates/contact.html
+++ b/t4u_website/templates/contact.html
@@ -3,5 +3,21 @@
 {% block title %}Contact{% endblock %}
 
 {% block content %}
-<h1>Template Contact</h1>
+<section class="page-section" id="contact">
+    <div class="container">
+        <!-- Contact Section Heading-->
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+        <!-- Icon Divider-->
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-envelope"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+    </div>
+    <div class="text-center text-secondary">
+        <p>I do my best to respond to your messages or emails as fast a possible. If you contact me in the morning you can usually expect a response the same day.</p>
+        <p>If preferred you can contact me via direct email at <a href="mailto:pt.tutor4u@gmail.com">pt.tutor4u@gmail.com</a></p>
+
+    </div>
+            
 {% endblock %}
