--- a/t4u_website/templates/index.html
+++ b/t4u_website/templates/index.html
@@ -14,7 +14,7 @@
     </div>
 </header>
 
-{% url 'public:contact' as contact_url %}
+{% url 'contact:contact' as contact_url %}
 <br>
 <div class="home-text">
     <br>
