--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,3 @@
-:root{
-    --bs-primary-rgb: 19, 154, 199;
-    --bs-secondary-rgb: 44, 62, 80;
-}
 
 html {
     height: 100%;
@@ -13,6 +9,7 @@ html {
     padding-top: 7.8rem;
     /* background: rgba(var(--bs-secondary-rgb)); */
 }
+
 
 @media (min-width: 992px) {
     #main{
@@ -103,3 +100,8 @@ html {
     font-size: 24px;
 }
 
+
+.header-light {
+    color: white;
+    font-size: 3rem;
+}
