--- a/t4u_website/templates/navbar.html
+++ b/t4u_website/templates/navbar.html
@@ -3,12 +3,12 @@
 {% url 'public:index' as index_url %}
 {% url 'public:about' as about_url %}
 {% url 'public:service' as service_url %}
-{% url 'public:contact' as contact_url %}
+{% url 'contact:contact' as contact_url %}
 
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand" href="#page-top"> 
+        <a class="navbar-brand" href="{{index_url}}"> 
         {% comment %} <img class="logo1" src="{% static "img/logo2.png" %}" /> {% endcomment %}
         <h1 id="nav-head">Tutor4You</h1>
         </a>
@@ -20,7 +20,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 {% if request.path == index_url %}active{% endif %}" href="{{ index_url }}">Home</a></li>
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 {% if request.path == about_url %}active{% endif %}" href="{{ about_url }}">About</a></li>
-                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 {% if request.path == service_url %}active{% endif %}" href="{{ service_url }}">Service & Fees</a></li>
+                <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 {% if request.path == service_url %}active{% endif %}" href="{{ service_url }}">Services & Fees</a></li>
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 {% if request.path == contact_url %}active{% endif %}" href="{{ contact_url }}">Contact</a></li>
             </ul>
         </div>
@@ -34,7 +34,7 @@
     <span>{% if request.path == about_url %}About{% else %}<a href="{{ about_url }}">About</a>{% endif %}</span>
     {% url 'public:service' as service_url %}
     <span>{% if request.path == service_url %}Service & Fees{% else %}<a href="{{ service_url }}">Service & Fees</a>{% endif %}</span>
-    {% url 'public:contact' as contact_url %}
+    {% url 'contact:contact' as contact_url %}
     <span>{% if request.path == contact_url %}Contact{% else %}<a href="{{ contact_url }}">Contact</a>{% endif %}</span>
     <span style="float:right">
         {% if user.is_authenticated %}
