integrated email for contact form

--- a/t4u_website/templates/about.html
+++ b/t4u_website/templates/about.html
@@ -24,6 +24,8 @@
     <br>
     <p>Throughout my tutoring lessons, I offer help with solving mathematical problems and provide extra tips & tricks to master each topic.</p>
     <p>Since Mathematics can be mind-boggling, all tutoring lessons will be adjusted to your way of learning and personalised so that you feel comfortable and confident.</p>
+    <br>
+    <p id="location"><img id="pin-drop-img" src="{% static "img/pin_drop.png" %}" />  Windhoek, Namibia <p>
 </div>
 
 {% endblock %}
