--- a/t4u_website/templates/service.html
+++ b/t4u_website/templates/service.html
@@ -13,6 +13,7 @@
 <h1 class="text-uppercase">Services</h1>
 <div class="serv-section">
     <p>NOTE: All lessons will be conducted from the comfort of your home, however, an additional venue can be organised if requested.</p>
+    <p>Furthermore, classes can also be conducted remotely using online tools such as Zoom or Microsoft-Teams </p>
     <br>
     <h3>Mathematics: </h3>
     <p>Tutoring is available for grades 5 to 12, and come at different price ranges.<p>
